--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,8 +63,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ParaView Test Suite inside a Docker Container
+        shell: bash
         run: |
-          docker run --rm -v "${{ github.workspace }}":/workdir -w /workdir debian:12 bash -c "
+          docker run --rm -v "$(pwd)":/workdir -w /workdir debian:12 bash -c "
             set -e
             echo 'Running ParaView Tests'
             apt-get update && apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 libgl1-mesa-glx
@@ -113,8 +114,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run VisIt Test Suite inside a Docker Container
+        shell: bash
         run: |
-          docker run --rm -v "${{ github.workspace }}":/workdir -w /workdir ubuntu:22.04 bash -c "
+          docker run --rm -v "$(pwd)":/workdir -w /workdir ubuntu:22.04 bash -c "
             set -e
             echo 'Running VisIt Tests'
             apt-get update && apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 curl zip unzip libgl1-mesa-glx
