--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ParaView Test Suite inside a Docker Container
-        shell: bash
+        shell: 'C:\Program Files\Git\bin\bash.exe'
         run: |
           docker run --rm -v "$(pwd)":/workdir -w /workdir debian:12 bash -c "
             set -e
@@ -114,7 +114,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run VisIt Test Suite inside a Docker Container
-        shell: bash
+        shell: 'C:\Program Files\Git\bin\bash.exe'
         run: |
           docker run --rm -v "$(pwd)":/workdir -w /workdir ubuntu:22.04 bash -c "
             set -e
