--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 👇 ADD THIS STEP TO SET UP A MODERN BUILDER
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -71,9 +70,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ParaView Test Suite
+        shell: bash
         run: |
           set -e
           echo "Running ParaView Tests inside a container"
+          export DEBIAN_FRONTEND=noninteractive
           apt-get update && apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 libgl1-mesa-glx
           
           python3 -V
@@ -123,9 +124,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run VisIt Test Suite
+        shell: bash
         run: |
           set -e
           echo "Running VisIt Tests inside a container"
+          export DEBIAN_FRONTEND=noninteractive
           apt-get update && apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 curl zip unzip libgl1-mesa-glx
           
           python3 -V
