--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,48 +7,29 @@ on:
     branches: [ '**' ]
 
 jobs:
-  ############################################################################
-  # BUILD JOB: Compiles the Docker image and pushes it to ghcr.io
-  ############################################################################
   build:
     name: Build and Push Docker Image
     runs-on: self-hosted
-
     permissions:
       contents: read
       packages: write
-
     steps:
-      - name: Clean Workspace
-        run: |
-          echo "Cleaning up previous workspace artifacts..."
-          sudo rm -rf $GITHUB_WORKSPACE/*
-          sudo rm -rf $GITHUB_WORKSPACE/.* || true
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to the GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract Docker metadata
+      - uses: docker/metadata-action@v5
         id: meta
-        uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
             type=ref,event=branch
             type=sha,prefix=
             type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
+      - uses: docker/build-push-action@v6
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
@@ -57,111 +38,89 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
 
-  ############################################################################
-  # PARAVIEW TEST JOB: Runs inside a Debian container on the Linux runner.
-  ############################################################################
   paraview-test:
     name: ParaView Tests
     needs: build
     runs-on: self-hosted
-
-    # This now works because the runner is on Linux.
-    # All steps below will run inside a clean Debian 12 container.
     container:
       image: debian:12
-
+      options: --user ${{ runner.uid }}:${{ runner.gid }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Run ParaView Test Suite
         shell: bash
         run: |
           set -e
-          echo "Running ParaView Tests inside a container"
-          export DEBIAN_FRONTEND=noninteractive
-          apt-get update && apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 libgl1-mesa-glx
+          echo "Running ParaView Tests as a non-root user"
+          # The non-root user can't run 'apt-get', so we temporarily use sudo.
+          # We must install 'sudo' first.
+          USER_ID=$(id -u)
+          if [ "$USER_ID" -ne 0 ]; then
+            apt-get update && apt-get install -y sudo
+            echo "ALL            ALL = (ALL) NOPASSWD: ALL" >> /etc/sudoers
+          fi
           
-          python3 -V
+          sudo apt-get update && sudo apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 libgl1-mesa-glx
+          
           python3 -m venv test-venv
           source test-venv/bin/activate
           pip3 install pandas matplotlib psutil scipy
-          
-          wget -O paraview.tar.gz 'https://www.paraview.org/paraview-downloads/download.php?submit=Download&version=v5.13&type=binary&os=Linux&downloadFile=ParaView-5.13.1-osmesa-MPI-Linux-Python3.10-x86_64.tar.gz'
+          wget -O paraview.tar.gz "https://www.paraview.org/paraview-downloads/download.php?submit=Download&version=v5.13&type=binary&os=Linux&downloadFile=ParaView-5.13.1-osmesa-MPI-Linux-Python3.10-x86_64.tar.gz"
           mkdir paraview
           tar xf paraview.tar.gz -C paraview --strip-components 1
-          
           export PARAVIEW_DIR=$PWD/paraview/bin
           $PARAVIEW_DIR/pvbatch --version
-          
-          export PARAVIEW_PATH=$PARAVIEW_DIR
-          REPO_DIR=$PWD
           cd Testing
-          
-          python3 test_suite.py $REPO_DIR/ --test_type ParaView --paraview_version 5.13.1 --non_gpu_machine
+          python3 test_suite.py ../ --test_type ParaView --paraview_version 5.13.1 --non_gpu_machine
           echo "ParaView tests complete"
-
-      - name: Upload ParaView Artifacts
+      - uses: actions/upload-artifact@v4
         if: always()
-        uses: actions/upload-artifact@v4
         with:
           name: paraview-test-results
           path: |
             ParaView_Vignettes/*/Testing/*.json
             ParaView_Vignettes/*/Testing/*.log
             Testing/*.json
-          retention-days: 30
 
-  ############################################################################
-  # VISIT TEST JOB: Runs inside an Ubuntu container on the Linux runner.
-  ############################################################################
   visit-test:
     name: VisIt Tests
     needs: build
     runs-on: self-hosted
-
-    # This also works now. All steps below will run inside a clean Ubuntu 22.04 container.
     container:
       image: ubuntu:22.04
-
+      options: --user ${{ runner.uid }}:${{ runner.gid }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Run VisIt Test Suite
         shell: bash
         run: |
           set -e
-          echo "Running VisIt Tests inside a container"
-          export DEBIAN_FRONTEND=noninteractive
-          apt-get update && apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 curl zip unzip libgl1-mesa-glx
+          echo "Running VisIt Tests as a non-root user"
+          # Temporarily grant sudo access to the non-root user to install packages.
+          USER_ID=$(id -u)
+          if [ "$USER_ID" -ne 0 ]; then
+            apt-get update && apt-get install -y sudo
+            echo "ALL            ALL = (ALL) NOPASSWD: ALL" >> /etc/sudoers
+          fi
           
-          python3 -V
+          sudo apt-get update && sudo apt-get -y install wget make autoconf gfortran libmpich-dev python3-full python3-pip ffmpeg libsm6 libxext6 curl zip unzip libgl1-mesa-glx
+          
           python3 -m venv test-venv
           source test-venv/bin/activate
           pip3 install pandas matplotlib psutil scipy
-          
-          wget -O visit.tar.gz 'https://github.com/visit-dav/visit/releases/download/v3.4.1/visit3_4_1.linux-x86_64-ubuntu22.tar.gz'
+          wget -O visit.tar.gz "https://github.com/visit-dav/visit/releases/download/v3.4.1/visit3_4_1.linux-x86_64-ubuntu22.tar.gz"
           mkdir visit
           tar xf visit.tar.gz -C visit --strip-components 1
-          
           export VISIT_DIR=$PWD/visit/bin
           $VISIT_DIR/visit -version
-          
-          export VISIT_PATH=$VISIT_DIR
-          REPO_DIR=$PWD
           cd Testing
-          
-          python3 test_suite.py $REPO_DIR/ --test_type VisIt --visit_version 3.4.1 --test_number 0
+          python3 test_suite.py ../ --test_type VisIt --visit_version 3.4.1 --test_number 0
           echo "VisIt tests complete"
-
-      - name: Upload VisIt Artifacts
+      - uses: actions/upload-artifact@v4
         if: always()
-        uses: actions/upload-artifact@v4
         with:
           name: visit-test-results
           path: |
             VisIt_Vignettes/*/Testing/*.json
             VisIt_Vignettes/*/Testing/*.log
             Testing/*.json
-          retention-days: 30
