--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     name: Build and Push Docker Image
     runs-on: self-hosted
     permissions:
-      contents: read
+      contents: write        # <-- needed to push badge to a branch
       packages: write
     steps:
       - uses: actions/checkout@v4
@@ -37,6 +37,22 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+
+      - name: Generate latest image badge
+        if: ${{ github.event_name != 'pull_request' }}
+        run: |
+          TAG=$(echo "${{ steps.meta.outputs.tags }}" | grep -Eo ':[a-f0-9]{7,}' | head -n 1 | tr -d ':')
+          [ -z "$TAG" ] && TAG=$(git rev-parse --short HEAD)
+          mkdir -p badges
+          echo '{"schemaVersion":1,"label":"docker image","message":"'"$TAG"'","color":"blue"}' > badges/docker-latest.json
+
+      - name: Publish badge to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: badges       # creates or updates a 'badges' branch
+          publish_dir: badges
 
   paraview-test:
     name: ParaView Tests
